++Added save post modal component

--- a/src/app/feature-modules/user/home-con/home-page/post/post.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/post/post.component.html
@@ -90,12 +90,13 @@
 <ng-template #menuTemplate >
   <div class="e-m">
     <p>Share</p>
-    <p (click)="savePost()">Save</p>
+    <p (click)="save()">Save</p>
     <p>Report</p>
     <p>Notify me</p>
   </div>
-
 </ng-template>
+
+
 
 <!--<div class="container">-->
 <!--<div class="row">-->
@@ -114,7 +115,6 @@
 <!--<p>{{c.content}}</p>-->
 <!--</div>-->
 <!--</div>-->
-
 <!--</div>-->
 <!--</div>-->
 <!--</div>-->
