**Modified mag component and content component with form validation

--- a/src/app/feature-modules/user/home-con/home-page/content/content.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/content/content.component.html
@@ -1,6 +1,6 @@
 <div class="c-c-h" *ngIf="!addToMag">
   <div class="i-c" (click)="bsModalRef.hide()"><i class="fa fa-angle-left"></i></div>
-  <div class="name" (click)="toggleAggToMag()">add to mag</div>
+  <!--<div class="name" (click)="toggleAggToMag()">add to mag</div>-->
   <div class="p" (click)="createPost(file)">Post</div>
 </div>
 
