--- a/src/app/feature-modules/user/home-con/home-page/mag/mag.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/mag/mag.component.html
@@ -1,77 +1,80 @@
-<div class="c-c-h" *ngIf="!addToMag">
-  <div class="i-c" (click)="bsModalRef.hide()"><i class="fa fa-angle-left"></i></div>
-  <div class="name" (click)="toggleAggToMag()">add to mag</div>
-  <div class="p" (click)="createPost(file)">Post</div>
-</div>
+<div class="h-100">
 
-<div class="c-c-h cch2" *ngIf="addToMag">
-  <div class="i-c" (click)="toggleAggToMag()"><i class="fa fa-angle-left"></i></div>
-  <div class="p" (click)="createPost(file)">Post</div>
-  <div class="l-d-c">
-    <div class="name active">create new</div>
-    <div class="name">add to existing</div>
+  <div class="c-c-h" *ngIf="!addToMag">
+    <div class="i-c" (click)="bsModalRef.hide()"><i class="fa fa-angle-left"></i></div>
+    <div class="name" (click)="toggleAggToMag()">add to mag</div>
+    <div class="p" (click)="createPost(file)">Post</div>
   </div>
-</div>
-<div class="p-bar-con">
-  <progressbar class="pbar" *ngIf="file != null" max="100" [value]="progress" [striped]="true"
-               [animate]="true"></progressbar>
-</div>
 
-<div class="c-c-i">
-
-  <form [formGroup]="captionForm">
-    <input type="text" class="form-control"
-           [(ngModel)]="caption" formControlName="caption" placeholder="Title field manadatory">
-    <div *ngIf="submitted || (f.caption.invalid && (f.caption.dirty || f.caption.touched))">
-      <div *ngIf="captionForm.hasError('required',['caption'])">
-        <small class="text-danger">
-          This field is required
-        </small>
-      </div>
+  <div class="c-c-h cch2" *ngIf="addToMag">
+    <div class="i-c" (click)="toggleAggToMag()"><i class="fa fa-angle-left"></i></div>
+    <div class="p" (click)="createPost(file)">Post</div>
+    <div class="l-d-c">
+      <div class="name active">create new</div>
+      <div class="name">add to existing</div>
     </div>
-  </form>
-  <div class="h-tag">
-    <div class="" (click)="addTags()"><i class="fa fa-hashtag"></i></div>
   </div>
-</div>
-
-<div class="c-d-c-v dcc" [ngClass]="backGround">
-
-  <quill-editor  (onContentChanged)="changedEditor($event)"></quill-editor>
-
-  <div class="hashtags-con">
-    <div class="hashtags" *ngFor="let t of tags; let i = index;">#{{t?.name}}</div>
-    <br>
-    <br>
-    <br>
+  <div class="p-bar-con">
+    <progressbar class="pbar" *ngIf="file != null" max="100" [value]="progress" [striped]="true"
+                 [animate]="true"></progressbar>
   </div>
 
-</div>
+  <div class="c-c-i">
 
+    <form [formGroup]="captionForm">
+      <input type="text" class="form-control"
+             [(ngModel)]="caption" formControlName="caption" placeholder="Title field manadatory">
+      <div *ngIf="submitted || (f.caption.invalid && (f.caption.dirty || f.caption.touched))">
+        <div *ngIf="captionForm.hasError('required',['caption'])">
+          <small class="text-danger">
+            This field is required
+          </small>
+        </div>
+      </div>
+    </form>
+    <div class="h-tag">
+      <div class="" (click)="addTags()"><i class="fa fa-hashtag"></i></div>
+    </div>
+  </div>
 
-<div class="c-f-c">
-  <div class="container t-a-c">
+  <div class="c-d-c-v dcc" [ngClass]="backGround">
 
+    <quill-editor  (onContentChanged)="changedEditor($event)"></quill-editor>
+
+    <div class="hashtags-con">
+      <div class="hashtags" *ngFor="let t of tags; let i = index;">#{{t?.name}}</div>
+      <br>
+      <br>
+      <br>
+    </div>
 
   </div>
+
+
+  <div class="c-f-c">
+    <div class="container t-a-c">
+
+
+    </div>
+  </div>
+
+  <div>
+    <input
+      hidden
+      id="imageimput"
+      ngfSelect
+      multiple
+      type="file"
+      [(lastBaseUrl)]="file"
+      accept="image/*"
+      (filesChange)="lastFileAt=getDate()"/>
+  </div>
+
+
+  <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)"
+               size="default"
+               color="#bcc6f3"
+               type="ball-fall"
+               name="posting"
+               [fullScreen]="true"></ngx-spinner>
 </div>
-
-<div>
-  <input
-    hidden
-    id="imageimput"
-    ngfSelect
-    multiple
-    type="file"
-    [(lastBaseUrl)]="file"
-    accept="image/*"
-    (filesChange)="lastFileAt=getDate()"/>
-</div>
-
-
-<ngx-spinner bdColor="rgba(0, 0, 0, 0.8)"
-             size="default"
-             color="#bcc6f3"
-             type="ball-fall"
-             name="posting"
-             [fullScreen]="true"></ngx-spinner>
