++Added story functionality

--- a/src/app/feature-modules/user/work-board/notifications/notifications.component.html
+++ b/src/app/feature-modules/user/work-board/notifications/notifications.component.html
@@ -3,7 +3,7 @@
   <div class="n-c-h">
     <div class="a-c">
       <i class="fa fa-angle-left" routerLink="../dashboard"></i>
-      <i class="fa fa-search float-right srch"></i>
+      <!--<i class="fa fa-search float-right srch"></i>-->
     </div>
     <p class="nh">Notifications</p>
   </div>
