--- a/src/scss/_workboard.scss
+++ b/src/scss/_workboard.scss
@@ -194,9 +194,11 @@
   background-color: #665eff !important;
   min-height: 70px;
 }
+
 .soon{
   background-color: #78849e !important;
 }
+
 .ps{
   float: right;
   color: #fff;
@@ -204,6 +206,7 @@
   font-size: 10px;
   margin-right: 12px;
 }
+
 .b-ps{
   position: fixed;
   background-color: #3acce1;
@@ -307,7 +310,6 @@
   }
 }
 
-
 .al-c{
   width: 87%;
   margin: 0 auto;
@@ -342,5 +344,53 @@
   .r{
     font-size: 17px;
     line-height: 20px;
+  }
+}
+
+.st-con{
+  width: 150px;
+  display: inline-block;
+  background-color: #fff;
+  border-radius: 10px;
+  height: 300px;
+  overflow: hidden;
+
+
+  .hdr{
+    position: relative;
+    background-color: #2c4159;
+    height: 100px;
+    .prof-con{
+      width: 100%;
+      bottom: -58px;
+      position: absolute;
+    }
+    .prof{
+      margin-left: 50px;
+      width: 50px;
+      height: 50px;
+      border-radius: 25px;
+      background-color: #f0f0f0;
+    }
+    .prof-name{
+      width: 100%;
+      display: block;
+      text-align: center;
+      p{
+        margin-bottom: 0;
+        line-height: 16px;
+        font-size: 13px;
+      }
+    }
+  }
+}
+
+.st-modal{
+  background-color: rgba(0, 0, 0, 0) !important;
+  .modal-content{
+    width: 150px;
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0) !important;
+    box-shadow: none;
   }
 }
