--- a/src/app/feature-modules/user/home-con/story/story.component.html
+++ b/src/app/feature-modules/user/home-con/story/story.component.html
@@ -6,12 +6,43 @@
 <!--</div>-->
 <!--<button class="btn btn-primary">This is modal button</button>-->
 <div class="st-con">
+
   <div class="hdr bcimg" style="background-image: url('./assets/images/background3.jpg')">
-    <div class="prof-con">
-      <div class="prof bcimg" style="background-image: url('./assets/images/profile3.jpg')"></div>
-      <div class="prof-name">
-        <p>Daniel Crage</p>
-        <small>@007</small>
+
+  </div>
+
+  <div class="prof-con">
+    <div class="prof bcimg" style="background-image: url('./assets/images/profile3.jpg')"></div>
+    <div class="prof-name">
+      <p>Daniel Crage</p>
+      <small>@007</small>
+    </div>
+  </div>
+
+  <div class="st-l-con">
+    <div class="st-p-o-con">
+      <div class="st-pr">
+        <div class="st-p-img bcimg" style="background-image: url('./assets/images/profile3.jpg')"></div>
+      </div>
+      <div class="st-p-n">
+        <p>daniel assefa selamtaw</p>
+      </div>
+
+    </div>
+    <div class="st-p-o-con">
+      <div class="st-pr">
+        <div class="st-p-img bcimg" style="background-image: url('./assets/images/profile3.jpg')"></div>
+      </div>
+      <div class="st-p-n">
+        <p>selam kil</p>
+      </div>
+    </div>
+    <div class="st-p-o-con">
+      <div class="st-pr">
+        <div class="st-p-img bcimg" style="background-image: url('./assets/images/profile3.jpg')"></div>
+      </div>
+      <div class="st-p-n">
+        <p>bob marely</p>
       </div>
     </div>
 
