**Modified save modal component

--- a/src/app/feature-modules/user/home-con/story/story.component.html
+++ b/src/app/feature-modules/user/home-con/story/story.component.html
@@ -30,7 +30,7 @@
 
     </div>
     <div class="st-p-o-con">
-      <div class="st-pr">
+      <div class="st-pr read">
         <div class="st-p-img bcimg" style="background-image: url('./assets/images/profile3.jpg')"></div>
       </div>
       <div class="st-p-n">
