--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -264,7 +264,6 @@
   }
 }
 
-
 .s-i-g{
   .dropdown{
     width: 80%;
@@ -279,4 +278,14 @@
   text-align: left;
 }
 
-
+.c-html-con{
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+.cHtml{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+}
